--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Enchiladas</h1>
+    <img src="https://images-gmi-pmc.edge-generalmills.com/0798b070-1f82-4fa2-91ea-17e8175e44e3.jpg" alt="Scrumptious enchiladas">
     
 </body>
 </html>
