add the ingredients and the steps to make the dish

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -7,8 +7,36 @@
     <title>Document</title>
 </head>
 <body>
+
     <h1>Enchiladas</h1>
+
     <img src="https://images-gmi-pmc.edge-generalmills.com/0798b070-1f82-4fa2-91ea-17e8175e44e3.jpg" alt="Scrumptious enchiladas">
     
+    <h5>We'll show you how to make this luxurious mexican dish
+        right from the comfort of your own home!</h5>
+        <ul>
+            <li>500g of Chicken Breast</li>
+            <li>200g of Cheese</li>
+            <li>4x Tortilla wraps</li>
+            <li>Salsa</li>
+            <li>250g of Refried Beans</li>
+            <li>500g of Tomato Puree</li>
+            <li>100g of Mexican Spices</li>        
+        </ul>
+    <h4>Steps</h4>   
+        <ol>
+            <li>Add 200ml of water with the tomato puree to a bowl and mix together with the spices with a spoon</li>
+            <li>Cut the chicken into small chunks and cook with a little oil on a frying pan</li>
+            <li>Add half of the sauce you made earlier to the pan, stirring into the chicken</li>
+            <li>Grate the cheese and add half of it into the pan, stir thouroughly</li>
+            <li>Microwave the tortillas for 30 seconds, splitting them up and warming them nicely</li>
+            <li>Fill the wraps with an even amount of chicken and sauce before wrapping them up and placing in an oven-proof dish</li>
+            <li>Spread the remainer of the sauce over the top of the enchiladas, covering them completely</li>
+            <li>Add the other half of the cheese over the top</li>
+            <li>Set a timer for 20 minutes and oven at 200C</li>
+            <li>While they cook in the oven, heat the refried beans in a pan</li>
+            <li>When ready, dish up the beans and place 2 enchiladas over the top of the beans before spreading salsa along the tortillas</li>
+            <li>Viola! Your very own mexican enchiladas are ready to be eaten!</li>
+        </ol>
 </body>
 </html>
