add the ingredients and instructions for cheesecake, reorder the recipe links on the main page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <ul>
     <li><a href="../odin-recipes/recipes/enchiladas.html">Enchiladas</a> </li>
     <li><a href="../odin-recipes/recipes/darknstormy.html">Dark and Stormy</a> </li>
+    <li><a href="../odin-recipes/recipes/cheesecake.html">Cheesecake</a></li>
 </ul>
 
 
