add links to top and main page

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -38,5 +38,7 @@
             <li>When ready, dish up the beans and place 2 enchiladas over the top of the beans before spreading salsa along the tortillas</li>
             <li>Viola! Your very own mexican enchiladas are ready to be eaten!</li>
         </ol>
+    <a href="enchiladas.html"><h4>Back to Top</h4></a>
+    <a href="../index.html"><h4>Back to Main Page</h4></a>
 </body>
 </html>
