--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="https://eu-assets.simpleview-europe.com/marketingliverpool/imageresizer/?image=%2Fdbimgs%2FVL%20Hero%20%285%29%20%282%29.png&action=LargeImageGalleryNew">
 <ul>
     <li><a href="../odin-recipes/recipes/enchiladas.html">Enchiladas</a> </li>
     <li><a href="../odin-recipes/recipes/darknstormy.html">Dark and Stormy</a> </li>
