add first colour and font changes using CSS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 style="color: rgb(57, 57, 199); font-size: 80px;">Odin Recipes</h1>
     <img src="https://eu-assets.simpleview-europe.com/marketingliverpool/imageresizer/?image=%2Fdbimgs%2FVL%20Hero%20%285%29%20%282%29.png&action=LargeImageGalleryNew">
 <ul>
     <li><a href="../odin-recipes/recipes/enchiladas.html">Enchiladas</a> </li>
