add stylesheet link in head of all recipes, play around with some colour and font on darknstormy in particular

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../odin-recipes/CSS/style.css">
 </head>
 <body>
     <h1 style="color: rgb(57, 57, 199); font-size: 80px;">Odin Recipes</h1>
