--- a/recipes/darknstormy.html
+++ b/recipes/darknstormy.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../odin-recipes/CSS/style.css">
 </head>
 <body style="background-color: rgb(12, 11, 11); color:rgb(214, 194, 233); font-size: 17px; font-family: fantasy;">
 
