--- a/recipes/darknstormy.html
+++ b/recipes/darknstormy.html
@@ -7,27 +7,32 @@
     <title>Document</title>
     <link rel="stylesheet" href="../odin-recipes/CSS/style.css">
 </head>
-<body style="background-color: rgb(12, 11, 11); color:rgb(214, 194, 233); font-size: 17px; font-family: fantasy;">
-
-    <h1 style="color: rgb(201, 144, 39)">Dark n' Stormy Cocktail Recipe</h1>
-
+<body>
+    <div>
+        <p>Dark n' Stormy Cocktail Recipe</p>
+    </div>
     <img src="https://cdn.shopify.com/s/files/1/1216/2612/files/a_dark__n_stormy_drink.jpg?v=1625989180" alt="Dark n stormy cocktail glazed with ice">
 
-    <h3 style="color: rgb(201, 144, 39); font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: 25px;">We'll show you how to make a sophisticated dark n' stormy cocktail!</h3>
-        <h5 style="font-size: 25px; color: rgb(130, 190, 40);">What you'll need:</h5>
-        <ul>
-            <li>Ice</li>
-            <li>4oz of your favourite Ginger beer</li>
-            <li>2oz of your favourite Dark Rum</li>
-            <li>Lime</li>
-        </ul>
+        <h3>We'll show you how to make a sophisticated dark n' stormy cocktail!</h3>
+    
+    <div class="what-need">
+            <h5>What you'll need:</h5>
+            <ul>
+                <li>Ice</li>
+                <li>4oz of your favourite Ginger beer</li>
+                <li>2oz of your favourite Dark Rum</li>
+                <li>Lime</li>
+            </ul>
+    </div>
 
-        <h5 style="font-size: 25px; color: rgb(130, 190, 40);">What to do:</h5>
+    <div class="to-do">    
+        <h5>What to do:</h5>
         <ol>
             <li>Fill a glass (Highball is best) with large chunks of ice</li>
             <li>Fill almost completely with ginger beer</li>
             <li>Top the remainer of the glass with dark rum</li>
             <li>Stir slightly and gently before garnishing with a wedge of lime</li>
         </ol>
+    </div>
 </body>
 </html>
